# cairols

./: .gitignore  .tool-versions  CONTRIBUTING.md  Cargo.toml  MAINTAINING.md  README.md  ROADMAP.md  ROADMAP_05_2026.md  SECURITY.md  build.rs  cairols-profile-1759224954404925.json  generate_test.py  runtest.sh  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-assign-team-to-review.yml  benchmarks.yml  cairo-update-check.yml  ci.yml  notify-pending-reviews.yml  scarb-nightly-check.yml  website-deploy.yml
benches/: client.rs  code_actions.rs  completions.rs  document_highlight.rs  fixtures.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  lsp.rs  references.rs  semantic_tokens.rs
benchmarks/diagnostics-opt-2026-04-03/: alexandria.afterEditLoop.top.txt  alexandria.afterFirstDiagnostics.top.txt  alexandria.afterMixedLoop.top.txt  alexandria.before.json  alexandria.json  comparison.csv  openzeppelin.after.json  openzeppelin.afterEditLoop.top.txt  openzeppelin.afterFirstDiagnostics.top.txt  openzeppelin.afterMixedLoop.top.txt  openzeppelin.before.json  report.md
benchmarks/generated-file-content-2026-04-03/: granular_file_content_probe.csv  granular_file_content_probe.json
benchmarks/granular-crate-configs-2026-04-03/: granular_crate_config_probe.csv  granular_crate_config_probe.json  report.md
benchmarks/granular-plugin-overrides-2026-04-03/: alexandria_child_smoke.stdout.json  alexandria_session.json  granular_plugin_override_probe.csv  granular_plugin_override_probe.json  report.md  smoke_run_status.txt
benchmarks/plugin-overrides-full-2026-04-03/: apples_alexandria.json  apples_openzeppelin.json  apples_to_apples_report.md  report.md  summary.csv
crates/cairo-lang-language-server/: Cargo.toml
scripts/: cairo_fmt.sh  cairo_test.sh  generate_memory_report.py  notify_pending_reviews.sh  notify_pending_reviews_payload.jq  run_dhat_benchmark.sh  sample_rss.sh
src/: config.rs  env_config.rs  lib.rs  main.rs  state.rs  testing.rs
src/ide/: analysis_progress.rs  doc_links.rs  formatter.rs  markdown.rs  mod.rs  ty.rs
src/ide/code_actions/: add_missing_trait.rs  cairo_lint.rs  create_module_file.rs  expand_macro.rs  fill_struct_fields.rs  fill_trait_members.rs  make_variable_mutable.rs  missing_import.rs  mod.rs  rename_unused_variable.rs  suggest_similar_identifier.rs  suggest_similar_member.rs  suggest_similar_method.rs
src/ide/code_lens/: debugger.rs  executables.rs  mod.rs  tests.rs
src/ide/completion/: attribute.rs  colon_colon.rs  completions.rs  doc_links.rs  dot_completions.rs  legacy_generic_completions.rs  mod.rs  mod_item.rs  path.rs  pattern.rs  self_completions.rs  struct_constructor.rs  use_statement.rs
src/ide/format/: documents.rs  mod.rs  traits.rs  types.rs
src/ide/hover/: mod.rs
src/ide/inlay_hints/: mod.rs  params.rs  types.rs
src/ide/introspection/: crates.rs  mod.rs  syntax_tree.rs
src/ide/macros/: expand.rs
src/ide/navigation/: goto_definition.rs  highlight.rs  mod.rs  references.rs  rename.rs
src/ide/scarb_toml/: hover.rs  mod.rs  utils.rs
src/ide/semantic_highlighting/: encoder.rs  mod.rs  token_kind.rs  token_traverser.rs
src/lang/: analysis_context.rs  defs.rs  filtering.rs  importable.rs  importer.rs  linter.rs  members.rs  methods.rs  mod.rs  plugins.rs  rename_file.rs  syntax.rs  text_matching.rs  visibility.rs
src/lang/db/: events.rs  memory_report.rs  migration.rs  mod.rs  semantic.rs  swapper.rs  syntax.rs  upstream.rs
src/lang/defs/: declarative_macro.rs  finder.rs  generic_param.rs  item.rs  member.rs  mod.rs  module.rs  variable.rs  variant.rs
src/lang/diagnostics/: file_batches.rs  file_diagnostics.rs  lsp.rs  mod.rs  project_diagnostics.rs  refresh.rs  scarb_manifest.rs  trigger.rs
src/lang/inspect/: defs.rs  mod.rs  refs.rs  usages.rs
src/lang/lsp/: ls_proto_group.rs  ls_proto_group_test.rs  mod.rs  utf8_span.rs
src/lang/proc_macros/: cache.rs  controller.rs  conversions.rs  db.rs  mod.rs  response_poll.rs
src/lang/usages/: mod.rs  search_scope.rs
src/lsp/: ext.rs
src/lsp/capabilities/: client.rs  server.rs
src/project/: builtin_plugins.rs  crate_data.rs  mod.rs  model.rs  project_manifest_path.rs  project_manifest_path_test.rs  scarb.rs  scarb_check_diagnostics.rs  scarb_manifest_diagnostics.rs  unmanaged_core_crate.rs
src/project/manifest_registry/: member_config.rs  mod.rs
src/project/model/: mod.rs
src/server/: client.rs  commands.rs  connection.rs  mod.rs  trigger.rs  trigger_test.rs
src/server/routing/: handlers.rs  mod.rs  traits.rs
src/server/schedule/: mod.rs  task.rs
src/testing/: benchmark.rs
src/toolchain/: info.rs  mod.rs  scarb.rs
tests/e2e/: analysis.rs  benchmarking.rs  code_actions.rs  code_actions_old.rs  completions.rs  external_tools_config.rs  goto.rs  goto_definition.rs  hover.rs  linter.rs  macro_expand.rs  main.rs  no_config_reload.rs  references.rs  semantic_tokens.rs  test_targets.rs  workspace_configuration.rs
tests/e2e/code_actions/: create_module_file.rs  fill_struct_fields.rs  fill_trait_members.rs  lint.rs  macro_expand.rs  make_variable_mutable.rs  missing_import.rs  missing_trait.rs  mod.rs  remove_unused_variable.rs  rename_unused_variable.rs  scarb_manifest.rs  similar_identifier.rs  similar_member.rs  similar_method.rs
tests/e2e/code_lens/: both_runners.rs  cairo_test.rs  custom.rs  executable.rs  mod.rs  no_runners.rs  other_file.rs  proc_macro.rs  snforge.rs
tests/e2e/completions/: attribute.rs  dot.rs  (+15 more)
tests/scarb_procedural_macros/: Cargo.toml  Scarb.toml
tests/scarb_procedural_macros_v2/: Cargo.toml  Scarb.toml
tests/scarb_procedural_macros_v2/src/: attribute.rs  derive.rs  inline.rs
website/: docs.md  index.md  package-lock.json  package.json
website/.vitepress/: config.mjs
website/docs/: language-server-binary-discovery.md  settings.md  troubleshooting.md
xtask/: Cargo.toml
xtask/src/: main.rs  set_cairo_version.rs  set_version.rs  sync_version.rs  upgrade.rs
(+340 files in other folders)
