[package]
name = "cairo-language-server"
version = "2.16.0-rc.0"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>", "StarkWare <info@starkware.co>"]
description = "The Cairo Language Server"
license = "Apache-2.0"
repository = "https://github.com/software-mansion/cairols"

[workspace]
members = ["xtask", "tests/scarb_procedural_macros", "tests/scarb_procedural_macros_v2"]

[features]
testing = []

# Managing dependencies on crates from starkware-libs/cairo repository:
#
# The Cairo compiler is made of a bunch of crates that inter-depend on each other and have
# synchronised versioning.
# It is very important to use a single revision of these crates in the entire Cairo toolchain,
# which consists of Cairo compiler, Scarb, CairoLS and other tools.
# The toolchain is eventually built by Scarb, which depends on everything other as regular crates.
# To ensure that all crates in the toolchain use the same revision of Cairo crates, we use a patch
# mechanism that Cargo provides.
# Because Cargo requires patches to change the crate source, we have an unspoken contract that
# all tools *always* depend on some crates.io versions of Cairo crates and Scarb uses
# [patch.crates.io] table to set final git revision for everything.
#
# To keep our Cargo.toml following this contract, always use `cargo xtask upgrade`
# for manipulating these dependencies.
[dependencies]
anyhow = "1"
bincode = { version = "2.0.1", default-features = true, features = ["serde"] }
cairo-lang-compiler = "2.16.0-rc.0"
cairo-lang-defs = "2.16.0-rc.0"
cairo-lang-diagnostics = "2.16.0-rc.0"
cairo-lang-doc = "2.16.0-rc.0"
cairo-lang-executable-plugin = "2.16.0-rc.0"
cairo-lang-filesystem = "2.16.0-rc.0"
cairo-lang-formatter = "2.16.0-rc.0"
cairo-lang-lowering = "2.16.0-rc.0"
cairo-lang-macro = "0.2.1"
cairo-lang-macro-v1 = { version = "0.1", package = "cairo-lang-macro", features = ["serde"] }
cairo-lang-parser = "2.16.0-rc.0"
cairo-lang-plugins = "2.16.0-rc.0"
cairo-lang-proc-macros = "2.16.0-rc.0"
cairo-lang-project = "2.16.0-rc.0"
cairo-lang-semantic = "2.16.0-rc.0"
cairo-lang-starknet = "2.16.0-rc.0"
cairo-lang-syntax = "2.16.0-rc.0"
cairo-lang-syntax-codegen = "2.16.0-rc.0"
cairo-lang-test-plugin = "2.16.0-rc.0"
cairo-lang-utils = "2.16.0-rc.0"
cairo-language-common = "2.16.0-rc.0"
cairo-lint = "2.16.0-rc.0"
colored = "3.1.1"
convert_case = "0.11.0"
create-output-dir = "1.0.0"
crossbeam = "0.8.4"
governor = { version = "0.8.0", default-features = false, features = ["std", "quanta"] }
indoc = "2"
itertools = "0.14.0"
jaro_winkler = "0.1.0"
jod-thread = "1.0.0"
lsp-server = "0.7.8"
lsp-types = "=0.95.1"
memchr = "2.7.6"
mimalloc = "0.1.48"
pulldown-cmark = "0.13.0"
salsa = "0.26.0"
scarb-metadata = "1.15.1"
scarb-proc-macro-server-types = "0.5.0"
scarb-stable-hash = "1"
semver = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tempfile = "3"
toml = "0.9.11"
tracing = "0.1"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"

[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2.180"

[dev-dependencies]
assert_fs = "1.1"
cairo-language-server = { path = ".", features = ["testing"] }
insta = { version = "1.46", features = ["toml", "json", "redactions"] }
pathdiff = "0.2"
regex = "1.12.3"
similar = "2.7"

# Here we specify real dependency specifications for Cairo crates *if* currently we want to use
# a particular unreleased commit (which is frequent mid-development).
# We list all Cairo crates that go into CairoLS's compilation unit even if LS itself does not depend
# on some of them directly.
# This ensures no duplicate instances of Cairo crates are pulled in by mistake.
[patch.crates-io]

# The profile used for CI in pull requests.
# External dependencies are built with optimisation enabled,
# while crates in this workspace are built with `dev` profile and full debug info.
# This is a trade-off between build time and e2e test time.
[profile.ci]
inherits = "test"
[profile.test.package."*"] # external dependencies
opt-level = 1
[profile.test.package."salsa"]
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
