[package]
name = "cairo-language-server"
version = "2.15.0"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>", "StarkWare <info@starkware.co>"]
description = "The Cairo Language Server"
license = "Apache-2.0"
repository = "https://github.com/software-mansion/cairols"

[workspace]
members = ["xtask", "tests/scarb_procedural_macros", "tests/scarb_procedural_macros_v2"]

[features]
testing = []

# Managing dependencies on crates from starkware-libs/cairo repository:
#
# The Cairo compiler is made of a bunch of crates that inter-depend on each other and have
# synchronised versioning.
# It is very important to use a single revision of these crates in the entire Cairo toolchain,
# which consists of Cairo compiler, Scarb, CairoLS and other tools.
# The toolchain is eventually built by Scarb, which depends on everything other as regular crates.
# To ensure that all crates in the toolchain use the same revision of Cairo crates, we use a patch
# mechanism that Cargo provides.
# Because Cargo requires patches to change the crate source, we have an unspoken contract that
# all tools *always* depend on some crates.io versions of Cairo crates and Scarb uses
# [patch.crates.io] table to set final git revision for everything.
#
# To keep our Cargo.toml following this contract, always use `cargo xtask upgrade`
# for manipulating these dependencies.
[dependencies]
anyhow = "1"
bincode = { version = "2.0.1", default-features = true, features = ["serde"] }
cairo-lang-compiler = "*"
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-doc = "*"
cairo-lang-executable-plugin = "*"
cairo-lang-filesystem = "*"
cairo-lang-formatter = "*"
cairo-lang-lowering = "*"
cairo-lang-macro = "0.2.1"
cairo-lang-macro-v1 = { version = "0.1", package = "cairo-lang-macro", features = ["serde"] }
cairo-lang-parser = "*"
cairo-lang-plugins = "*"
cairo-lang-proc-macros = "*"
cairo-lang-project = "*"
cairo-lang-semantic = "*"
cairo-lang-starknet = "*"
cairo-lang-syntax = "*"
cairo-lang-syntax-codegen = "*"
cairo-lang-test-plugin = "*"
cairo-lang-utils = "*"
cairo-language-common = "*"
cairo-lint = "*"
colored = "3.1.1"
convert_case = "0.11.0"
create-output-dir = "1.0.0"
crossbeam = "0.8.4"
governor = { version = "0.8.0", default-features = false, features = ["std", "quanta"] }
indoc = "2"
itertools = "0.14.0"
jaro_winkler = "0.1.0"
jod-thread = "1.0.0"
lsp-server = "0.7.8"
lsp-types = "=0.95.1"
memchr = "2.7.6"
mimalloc = "0.1.48"
salsa = "0.26.0"
scarb-manifest-schema = { git = "https://github.com/software-mansion/scarb/",  branch = "spr/main/986bd66f"}
scarb-metadata = "1.15.1"
scarb-proc-macro-server-types = "0.5.0"
scarb-stable-hash = "1"
semver = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tempfile = "3"
toml = "0.9.11"
tracing = "0.1"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
toml_edit = "0.23.7"

[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2.180"

[dev-dependencies]
assert_fs = "1.1"
cairo-language-server = { path = ".", features = ["testing"] }
insta = { version = "1.46", features = ["toml", "json", "redactions"] }
pathdiff = "0.2"
regex = "1.12.3"
similar = "2.7"

# Here we specify real dependency specifications for Cairo crates *if* currently we want to use
# a particular unreleased commit (which is frequent mid-development).
# We list all Cairo crates that go into CairoLS's compilation unit even if LS itself does not depend
# on some of them directly.
# This ensures no duplicate instances of Cairo crates are pulled in by mistake.
[patch.crates-io]
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-language-common = { git = "https://github.com/software-mansion/cairo-language-common", rev = "e780ac2be99edda452643a8edb4b10acc7adccf1" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-doc = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-eq-solver = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-executable = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-executable-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb/",  branch = "spr/main/986bd66f"}
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-proc-macros = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-runnable-utils = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-sierra-type-size = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-starknet-classes = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-test-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "661df684cb9f5e14b24d0cd0a0b78166c92185ab" }
cairo-lint = { git = "https://github.com/software-mansion/cairo-lint", rev = "e1f89ac523a44318dfe909f4741ee35735fa2eb1" }
# The profile used for CI in pull requests.
# External dependencies are built with optimisation enabled,
# while crates in this workspace are built with `dev` profile and full debug info.
# This is a trade-off between build time and e2e test time.
[profile.ci]
inherits = "test"
[profile.test.package."*"] # external dependencies
opt-level = 1
[profile.test.package."salsa"]
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
