[package]
name = "cairo-lang-language-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo language server."

[features]
testing = []

[dependencies]
anyhow = "1"
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-doc = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-test-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b" }
cairo-lang-macro = "0.1.1"
convert_case = "0.6.0"
crossbeam = "0.8.4"
governor = { version = "0.7.0", default-features = false, features = ["std", "quanta"] }
indent = "0.1.1"
indoc = "2"
itertools = "0.12.1"
jod-thread = "0.1.2"
lsp-server = "0.7.7"
lsp-types = "=0.95.0"
rustc-hash = "1.1.0"
salsa = { package = "rust-analyzer-salsa", version = "0.17.0-pre.6" }
scarb-metadata = "1.13"
scarb-proc-macro-server-types = "0.1"
scarb-stable-hash = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.116"
smol_str = { version = "0.2.0", features = ["serde"] }
tempfile = "3"
tracing = "0.1"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2.155"

[dev-dependencies]
assert_fs = "1.1"
cairo-lang-language-server = { path = ".", features = ["testing"] }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "0d9de394455f51edb3ff93f2f5e9699859e5760b", features = ["testing"] }
pathdiff = "0.2"
pretty_assertions = "1.4.0"
