[package]
name = "cairols_test_macros_v2"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb", rev = "57f9b61336b573e82a354d7d30a1273fb9c6c4e8" }
cairo-lang-primitive-token = "1"

[package.metadata.cargo-machete]
ignored = ["cairo-lang-primitive-token"]
