[package]
name = "cairols_test_macros_v2"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb", rev = "d3c66e009645854bb859e43e89467b457055e6aa" }
cairo-lang-primitive-token = "1"

[package.metadata.cargo-machete]
ignored = ["cairo-lang-primitive-token"]
