[package]
name = "cairols_test_macros_v2"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb.git", rev = "5f11cee9f8c9420917835d7cd2fe428b33fb6aea" }
cairo-lang-primitive-token = "1"

[package.metadata.cargo-machete]
ignored = ["cairo-lang-primitive-token"]
